updated .gitignore, copyright and added a new folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 last_code.cl
 *.npy
 img/
+unversioned/
+
+# needed for the spectrum shader to work. not sure about the IPR of these...
+color_data/cie-1931.csv
+color_data/cie-1964.csv
