--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ pylintrc
 # needed for the spectrum shader to work. not sure about the IPR of these...
 data/cie-1931.csv
 data/cie-1964.csv
+data/*.off
